--- a/styles.css
+++ b/styles.css
@@ -338,6 +338,7 @@ a:hover{
 .skills h1{
     text-align: center;
     text-decoration: underline;
+    letter-spacing: 3px;
 }
 
 .skills-container{
@@ -413,7 +414,7 @@ a:hover{
     transition: transform 0.3 ease-in-out;
 }
 
-.project-container img:hover{
+.project-container:hover{
     transform: scale(1.3);
 }
 
@@ -445,6 +446,11 @@ a:hover{
 .projects img{
     max-width: 300px;
     max-height: 200px;
+}
+
+.project-img{
+    border-radius: 5px;
+    border: solid 3px; 
 }
 
 .project-icon{
