--- a/styles.css
+++ b/styles.css
@@ -402,8 +402,8 @@ a:hover {
 .skills-container {
   position: relative;
   height: 300px;
+  width: 450px;
   box-sizing: border-box;
-  border: solid 3px;
   background-color: #f6ebec;
   margin: 0.4px;
   overflow: hidden;
@@ -414,7 +414,8 @@ a:hover {
   opacity: 0;
   transform: translateY(20px);
   animation: fadeIn 1s forwards;
-  font-size: 2.5rem;
+  font-size: 2.4rem;
+  margin-bottom: 3rem;
   text-align: center;
 }
 
@@ -471,7 +472,6 @@ a:hover {
 .skills-container-container {
   display: flex;
   justify-content: center;
-  margin: 2em;
   margin-bottom: 4rem;
 }
 
@@ -506,16 +506,16 @@ a:hover {
 }
 
 .icon img {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   margin-bottom: 5px;
 }
 
 .icon {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .icon p {
